# mib

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
blinky/: Cargo.toml
blinky/src/: main.rs
crates/01-blinky/: Cargo.toml
crates/02-rtt/: Cargo.toml
crates/02-rtt/src/: main.rs
crates/04-roulette/: Cargo.toml
crates/04-roulette/src/: main.rs
crates/05-uart/src/: main.rs  serial_setup.rs
crates/08-i2c-uart/: Cargo.toml
crates/09-compass/: Cargo.toml
crates/09-compass/src/: calibration.rs  led.rs  main.rs
crates/blinky/: Cargo.toml
crates/blinky/src/: main.rs
crates/i2c-driver/: Cargo.toml
crates/i2c-driver/src/: main.rs
crates/i2c-register/: Cargo.toml
crates/i2c-register/src/: main.rs
crates/i2c-uart/: Cargo.toml
crates/i2c-uart/src/: main.rs
crates/roulette/: Cargo.toml
crates/roulette/src/: main.rs
crates/rtt/: Cargo.toml
crates/uart/: Cargo.toml
crates/uart/src/: main.rs  serial_setup.rs
roulette/: Cargo.toml
roulette/src/: main.rs
rtt/: Cargo.toml
rtt/src/: main.rs
uart/: Cargo.toml
uart/src/: main.rs
