[package]
name = "uart"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
microbit-v2 = "0.13.0"
nb = "1.0.0"
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
