[package]
name = "i2c-uart"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
heapless = "0.7.16"
lsm303agr = "0.2.2"
microbit-v2 = "0.13.0"
nb = "1.1.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = "0.4.0"
